# electrochemical-workstation-slave

./: CMakeLists.txt  dac.h  main.c  prj.conf
boards/arm/elechemical_nrf52832/: Kconfig.board  Kconfig.defconfig  elechemical_nrf52832-pinctrl.dtsi  elechemical_nrf52832.dts  elechemical_nrf52832.yaml  elechemical_nrf52832_defconfig
drivers/: ad5940.h  ad5940_nrf52.c  ad5940_nrf52.h  ad5940_platform.h  ad594x.c  ad594x.h  adc.c  adc.h  adc_nrf.c  bat_impedance.c  bat_impedance.h  chrono_amp_simple.c  chrono_amp_simple.h  chrono_amperometric.c  chrono_amperometric.h  custom_cv.c  custom_cv.h  cyclic_voltammetry.c  cyclic_voltammetry.h  dac.c  eis_impedance.c  eis_impedance.h  freistat_ca.c  freistat_ca.h  freistat_ramp.c  freistat_ramp.h  impedance_ad594x.c  impedance_ad594x.h  nrf52_peripheral.c  nrf52_peripheral.h
elec_methods/: ca.c  ca.h  ca2.c  ca3.c  common.c  common.h  cv.c  cv.h  cv2.c  eis.c  eis.c.backup  eis.c.backup2  eis.h  ocp.c  ocp.h
include/: ble_faca.h  ble_protocal.h
src/: ble_faca.c  ble_protocal.c  main.c
